--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.daemon=false
-org.gradle.jvmargs=-Xmx1024m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 kotlin.compiler.execution.strategy=in-process
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 org.gradle.parallel=false
 org.gradle.workers.max=1
 
